force-app/main/default/objects/KimbleOne__TimePatternVariantPeriodRateBand__c/KimbleOne__TimePatternVariantPeriodRateBand__c.object-meta.xml
<CustomObject>
    <label>Time Pattern Variant Period Rate Band</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Time Pattern Variant Period Rate Band Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Pattern Variant Period Rate Bands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>