force-app/main/default/objects/KimbleOne__TimePatternVariantPeriodRateBand__c/fields/KimbleOne__MaximumUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__MaximumUsage__c</fullName>
    <label>Z130Obs Maximum Usage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>