force-app/main/default/objects/KimbleOne__TimePatternVariantPeriodRateBand__c/fields/KimbleOne__PeriodRateBand__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodRateBand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Period Rate Band</label>
    <referenceTo>KimbleOne__PeriodRateBand__c</referenceTo>
    <relationshipLabel>Time Pattern Variant Period Rate Bands</relationshipLabel>
    <relationshipName>TimePatternVariantPeriodRateBands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>