force-app/main/default/objects/KimbleOne__TimePatternVariantPeriodRateBand__c/fields/KimbleOne__TimePatternVariant__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePatternVariant__c</fullName>
    <label>Time Pattern Variant</label>
    <referenceTo>KimbleOne__TimePatternVariant__c</referenceTo>
    <relationshipLabel>Time Pattern Variant Period Rate Bands</relationshipLabel>
    <relationshipName>TimePatternVariantPeriodRateBands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>